Complete Bharat Voter Portal Overhaul with Premium UI, REST-based Gemini API, bug fixes, dark mode, and improved map functionality